# maap-eoapi

./: .gitignore  LICENSE  README.md  app.py  cdk.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-lockfile.yml  deploy.yml  tests.yml  unit-tests.yml
.github/workflows/scripts/: import_stacks_variables_to_github_output.sh
cdk/: MaapEoapiCommon.ts  PatchManager.ts  PgStacInfra.ts  app.ts  config.py  config.ts  maap_eoapi_common.py  patch_manager.py  pgstac_infra.py  vpc.py
cdk/constructs/: dps_stac_item_generator.py
cdk/constructs/DpsStacItemGenerator/: index.ts
cdk/constructs/DpsStacItemGenerator/runtime/: Dockerfile  pyproject.toml
cdk/constructs/DpsStacItemGenerator/runtime/src/dps_stac_item_generator/: handler.py  item.py
cdk/constructs/DpsStacItemGenerator/runtime/tests/: test_item.py  test_item_gen_handler.py
cdk/dockerfiles/: Dockerfile.raster  Dockerfile.stac
cdk/handlers/: raster_handler.py
cdk/runtimes/eoapi/raster/: pyproject.toml
cdk/runtimes/eoapi/raster/eoapi/raster/: factory.py  main.py
cdk/runtimes/eoapi/stac/: README.md  pyproject.toml
cdk/runtimes/eoapi/stac/eoapi/stac/: auth.py  handler.py  main.py  settings.py  transactions.py
cdk/runtimes/eoapi/stac/tests/: test_app.py  test_auth.py  test_handler.py
dev-docs/specs/: stac-api-collection-transactions.md
docs/adr/: stac-generation-ingestion-architecture.md  stac-generation-ingestion-user-stories.md
scripts/: load_demo_stac_catalogs.py
test/: README.md  config.test.ts  pgstac-infra.test.ts
tests/: README.md  ingestion.py  test_config.py  test_pgstac_infra.py  test_stac_ingestion.py
