[project]
name = "maap-eoapi"
version = "0.0"
requires-python = ">=3.12"

[tool.uv.sources]
dps-stac-item-generator = { path = "cdk/constructs/DpsStacItemGenerator/runtime" }
eoapi-raster = { path = "cdk/runtimes/eoapi/raster" }


[dependency-groups]
dev = [
    "aws-lambda-typing>=2.20.0",
]


[tool.uv]
no-build-isolation-package = ["numexpr"]

[tool.ruff]

[tool.ruff.lint]
