[project]
name = "maap-eoapi"
version = "0.0"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.220.0",
    "constructs==10.4.2",
    "eoapi-cdk>=11.6.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
dps-stac-item-generator = { path = "cdk/constructs/DpsStacItemGenerator/runtime" }
eoapi-raster = { path = "cdk/runtimes/eoapi/raster" }
eoapi-stac = { path = "cdk/runtimes/eoapi/stac" }


[dependency-groups]
dev = [
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.34",
    "pytest>=8.0",
    "pystac[validation]>=1.0",
    "requests>=2.31",
]


[tool.uv]
no-build-isolation-package = ["numexpr"]

[tool.ruff]

[tool.ruff.lint]
