[project]
name = "dps-stac-item-generator"
version = "0.1.0"
description = "An application for generating STAC items from DPS catalog.json outputs"
authors = [
    { name = "hrodmn", email = "henry@developmentseed.org" }
]
requires-python = ">=3.12"
dependencies = [
    "obstore>=0.7.0",
    "pydantic>=2.11.0",
    "pystac[validation]>=1.13.0",
    "stac-pydantic>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
