[project]
name = "eoapi.stac"
description = "Custom STAC API runtime for MAAP"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Henry Rodman", email = "henry@developmentseed.com"},
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "mangum==0.19",
    "pydantic-settings>=2,<3",
    "stac-fastapi-pgstac>=6.2,<6.3",
    "starlette-cramjam>=0.4,<0.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "eoapi/stac/__init__.py"

[tool.pdm.build]
includes = ["eoapi/stac"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
